# mlf

./: .gitignore  clustrowanie.md  flake.nix  l.sh  meta.json  pyproject.toml  s.js  todo.md
mfl/: bank.py  c.py  cross.py  csa.py  init.py  lexer.py  main.py  mutations.py  utils.py
mlf/: main.py
populations/: 000.csv  001.csv
